[project]
name = "vc-vid-timeseriesplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lesguillemets", email = "kgkacko+github@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "polars>=1.37.1",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyside6>=6.10.2",
]

[project.scripts]
vc-vid-timeseriesplot = "vc_vid_timeseriesplot:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
